vlib/v/checker/tests/generics_struct_nokeys_init_err.vv
struct Am {
	inner int
}

fn convert[T](num int) T {
	return T{num, 1}
}

fn main() {
	println(convert[Am](3).inner)
	assert convert[Am](3).inner == 3
}
